# lame-core

./: pyproject.toml
src/lame_core/: CustomWidgets.py  UITheme.py  config.py
